Allow to set the new --add-opens argument for JDK 9, scratchpad tests require slightly more memory on JDK 9 now, also adjust the Jenkins DSL accordingly.
git-svn-id: https://svn.apache.org/repos/asf/poi/trunk@1776608 13f79535-47bb-0310-9956-ffa450edef68